--- a/css/home.css
+++ b/css/home.css
@@ -69,7 +69,7 @@ body{
 .criador{
     margin-top: 80px;
     border-top: solid 2px gray;
-    padding-bottom: 15px;
+    padding: 20px 5px;
     box-sizing: border-box;
 }
 .criador img{
@@ -78,13 +78,16 @@ body{
     height: 38px;
     float: left;
     margin-right: 12px;
-    margin-top: 18px;
+}
+.criador p{
+    margin-top: 7px;
 }
 .criador p a{
     font-size: 10px;
     text-decoration: unset;
     color: white;
     text-transform: uppercase;
+    margin-top: 30px;
 }
 svg{
     float: left;
@@ -110,6 +113,9 @@ svg{
         width: 260px;
         max-width: 350px;
         border-radius: 10px;
+    }
+    .criador p{
+        margin-top: 10px;
     }
     .criador p a{
         font-size: 12px;
